# app/Models/File.php
@@ -5,6 +5,49 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
+/**
+ * @OA\Schema(
+ *   @OA\Property(
+ *     property="id",
+ *     description="file id",
+ *     type="integer",
+ *   ),
+ *   @OA\Property(
+ *     property="name",
+ *     description="file description",
+ *     type="string",
+ *   ),
+ *   @OA\Property(
+ *     property="org_name",
+ *     type="string",
+ *     description="file orginalfile name",
+ *   ),
+ *   @OA\Property(
+ *     property="file_name",
+ *     description="file file name",
+ *     type="string",
+ *   ),
+ *   @OA\Property(
+ *     property="mime",
+ *     description="file mime type",
+ *     type="string",
+ *   ),
+ *   @OA\Property(
+ *     property="size",
+ *     description="file size",
+ *     type="string",
+ *   ),
+ *   @OA\Property(
+ *     property="created_at",
+ *     description="Initial creation timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
+ *   @OA\Property(property="updated_at",
+ *     description="Last update timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
+ * )
+ */
 class File extends Model
 {
     use HasFactory;
