# app/Models/Packet.php
@@ -8,6 +8,55 @@ use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 /**
  * @OA\Schema(
+ *   @OA\Property(
+ *    property="id",
+ *    description="packet id",
+ *    type="integer", readOnly="true",
+ *  ),
+ *  @OA\Property(
+ *    property="name",
+ *    description="packet name",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="desc",
+ *    description="packet description",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="name_polish",
+ *    description="polish package name",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="name_latin",
+ *    description="latin package name",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="producer_id",
+ *    description="package manufacturer id",
+ *    type="integer",
+ *  ),
+ *   @OA\Property(
+ *     property="expiration_date",
+ *     description="package expiration date",
+ *     type="string", format="date-time",
+ *   ),
+ *   @OA\Property(
+ *     property="purchase_date",
+ *     description="package purchase date",
+ *     type="string", format="date-time",
+ *   ),
+ *   @OA\Property(
+ *     property="created_at",
+ *     description="Initial creation timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
+ *   @OA\Property(property="updated_at",
+ *     description="Last update timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
  * )
  */
 class Packet extends Model
