# app/Models/Producer.php
@@ -7,58 +7,41 @@ use Illuminate\Database\Eloquent\Model;
 
 /**
  * @OA\Schema(
+ *   @OA\Property(
+ *    property="id",
+ *    description="packet id",
+ *    type="integer", readOnly="true",
+ *  ),
+ *  @OA\Property(
+ *    property="name",
+ *    description="pproducer name",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="desc",
+ *    description="producer description",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="country",
+ *    description="country of manufacture",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="created_at",
+ *    description="Initial creation timestamp",
+ *    type="string", format="date-time", readOnly="true",
+ *  ),
+ *  @OA\Property(
+ *    property="updated_at",
+ *    description="Last update timestamp",
+ *    type="string", format="date-time", readOnly="true",
+ *  ),
  * )
  */
 class Producer extends Model
 {
     use HasFactory;
-
-    /**
-     * The product name
-     * @var string
-     *
-     * @OA\Property(
-     *   type="string",
-     *   description="The producer name"
-     * )
-     */
-    public $name;
-
-    /**
-     * The product desc
-     * @var string
-     *
-     * @OA\Property(
-     *   type="string",
-     *   description="The producer description"
-     * )
-     */
-    public $desc;
-
-    /**
-     * The product name
-     * @var string
-     *
-     * @OA\Property(
-     *   type="string",
-     *   description="The producer name"
-     * )
-     */
-    public $country;
-
-    /**
-     * Packets list of producer
-     * @var string
-     *
-     * @OA\Property(
-     *   type="array",
-     *   @OA\Items(
-     *     ref="#/components/schemas/Packet"
-     *   ),
-     *   description="Packets list of producer"
-     * )
-     */
-    public $packets;
 
     protected $fillable = [
         'name',
