# app/Models/User.php
@@ -12,13 +12,37 @@ use App\Notifications\ResetPasswordNotification;
 
 /**
  * @OA\Schema(
- * @OA\Property(property="created_at", type="string", format="date-time", description="Initial creation timestamp", readOnly="true"),
- * @OA\Property(property="updated_at", type="string", format="date-time", description="Last update timestamp", readOnly="true"),
- * @OA\Property(property="deleted_at", type="string", format="date-time", description="Soft delete timestamp", readOnly="true"),
+ *   @OA\Property(
+ *    property="id",
+ *    description="user's id",
+ *    type="integer", readOnly="true",
+ *  ),
+ *  @OA\Property(
+ *    property="name",
+ *    description="user's name",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="email",
+ *    description="user's email",
+ *    type="string",
+ *  ),
+ *  @OA\Property(
+ *    property="email_verified_at",
+ *    description="date of email verification by the user",
+ *    type="string", format="date-time", readOnly="true",
+ *   ),
+ *   @OA\Property(
+ *     property="created_at",
+ *     description="Initial creation timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
+ *   @OA\Property(
+ *     property="updated_at",
+ *     description="Last update timestamp",
+ *     type="string", format="date-time", readOnly="true",
+ *   ),
  * )
- * Class BaseModel
- *
- * @package App\Models
  */
 class User extends Authenticatable implements MustVerifyEmail
 {
@@ -26,37 +50,17 @@ class User extends Authenticatable implements MustVerifyEmail
     use HasFactory;
     use Notifiable;
 
-    public function sendPasswordResetNotification($token)
-    {
-        $this->notify(new ResetPasswordNotification($token));
-    }
-
-    /**
-     * The attributes that are mass assignable.
-     *
-     * @var array<int, string>
-     */
     protected $fillable = [
         'name',
         'email',
         'password',
     ];
 
-    /**
-     * The attributes that should be hidden for serialization.
-     *
-     * @var array<int, string>
-     */
     protected $hidden = [
         'password',
         'remember_token',
     ];
 
-    /**
-     * The attributes that should be cast.
-     *
-     * @var array<string, string>
-     */
     protected $casts = [
         'email_verified_at' => 'datetime',
     ];
@@ -64,5 +68,10 @@ class User extends Authenticatable implements MustVerifyEmail
     public function packets()
     {
         return $this->hasMany(Packet::class, 'owner_id');
+    }
+
+    public function sendPasswordResetNotification($token)
+    {
+        $this->notify(new ResetPasswordNotification($token));
     }
 }
